sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: '(' expected but '{' found.
	while {
              ^AlgBubbleSort1:12: error: illegal start of simple expression
}
^AlgBubbleSort1:13: error: 'while' expected but '}' found.
}
^