sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	do {
		for (i<-0 to getNombreValeurs()-2){
			if (plusPetit(i, i+1)==false)
				echange(i, i+1)
		}
	while {
		for (j<-0 to getNombreValeurs()-2)
		plusPetit(j, j+1)==false
	}
}
}

  //faire: 
       // Pour tout i dans [0,lgr-2]
        //  Si les cases i et i+1 doivent être inversées, le faire
  //   tant qu'on a inverser des choses lors du dernier parcours